[Disha] : Added UC16 feature